force-app/main/default/objects/Fraud_Case__c/Fraud_Case__c.object-meta.xml
<CustomObject>
    <label>Fraud Case</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Fraud Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fraud Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>