force-app/main/default/objects/Fraud_Case__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>TextArea</type>
</CustomField>